--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "## Author: \n",
     "Patrick Freeman (CSP)\n",
     "## Date Created: \n",
-    "04/24/23\n",
+    "04/25/23\n",
     "## Date last modified:\n",
     "print('Last Updated On: ', datetime.datetime.now())\n",
     "## Email: \n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +162,16 @@
     "    icount = focal_count(image, radius, unit)\n",
     "    return isum.divide(icount).rename(new_names)\n",
     "\n",
+    "# Define a function to calculate the Surface Roughness as the the mean absolute deviation of values from the mean within the window - window size is in meters \n",
+    "def surface_sa(image, window_size, name):\n",
+    "    names = image.bandNames().getInfo()\n",
+    "    new_names = [s + name for s in names]\n",
+    "    kernel = ee.Kernel.circle(radius=window_size, units='meters')\n",
+    "    mean = image.reduceNeighborhood(ee.Reducer.mean(), kernel)\n",
+    "    deviation = image.subtract(mean)\n",
+    "    absolute_deviation = deviation.abs()\n",
+    "    return absolute_deviation.reduceNeighborhood(ee.Reducer.mean(), kernel).rename(new_names)\n",
+    "\n",
     "def toFloat(img):\n",
     "    return img.float()"
    ]
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,14 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rap_cover_all_small Band names: ['2018_AFG_5km', '2018_PFG_5km', '2018_SHR_5km', '2018_TRE_5km', '2018_BGR_5km', '2019_AFG_5km', '2019_PFG_5km', '2019_SHR_5km', '2019_TRE_5km', '2019_BGR_5km', '2021_AFG_5km', '2021_PFG_5km', '2021_SHR_5km', '2021_TRE_5km', '2021_BGR_5km']\n"
+      "rap_cover_all_small Band names: ['2016_AFG_5km', '2016_PFG_5km', '2016_SHR_5km', '2016_TRE_5km', '2016_BGR_5km', '2017_AFG_5km', '2017_PFG_5km', '2017_SHR_5km', '2017_TRE_5km', '2017_BGR_5km', '2018_AFG_5km', '2018_PFG_5km', '2018_SHR_5km', '2018_TRE_5km', '2018_BGR_5km', '2019_AFG_5km', '2019_PFG_5km', '2019_SHR_5km', '2019_TRE_5km', '2019_BGR_5km', '2021_AFG_5km', '2021_PFG_5km', '2021_SHR_5km', '2021_TRE_5km', '2021_BGR_5km']\n",
+      "Band 1 scale:  30.000000000000004\n",
+      "Band 1 projection:  {'type': 'Projection', 'crs': 'EPSG:4326', 'transform': [0.00026949458523585647, 0, -124.76979458874112, 0, -0.00026949458523585647, 49.393776065783484]}\n"
      ]
     }
    ],
@@ -278,14 +290,14 @@
     "\n",
     "\n",
     "### Filter RAP cover ImageCollection into yearly sets\n",
-    "#rap_cover_2016 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2016]))).toBands()\n",
-    "#rap_cover_2017 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2017]))).toBands()\n",
+    "rap_cover_2016 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2016]))).toBands()\n",
+    "rap_cover_2017 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2017]))).toBands()\n",
     "rap_cover_2018 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2018]))).toBands()\n",
     "rap_cover_2019 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2019]))).toBands()\n",
     "rap_cover_2021 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2021]))).toBands()\n",
     "\n",
     "### Combine all into single multiband image \n",
-    "rap_cover_all = ee.Image([rap_cover_2018, rap_cover_2019, rap_cover_2021])\n",
+    "rap_cover_all = ee.Image([rap_cover_2016, rap_cover_2017, rap_cover_2018, rap_cover_2019, rap_cover_2021])\n",
     "\n",
     "rap_cover_all_band_names = rap_cover_all.bandNames()\n",
     "#print('rap_cover_2016 Band names:', rap_cover_all_band_names.getInfo())  # ee.List of band names\n",
@@ -294,6 +306,12 @@
     "rap_cover_all_small = focal_mean(rap_cover_all, rad_small, \"meters\", name_small).clip(geometry)\n",
     "rap_cover_all_small_band_names = rap_cover_all_small.bandNames()\n",
     "print('rap_cover_all_small Band names:', rap_cover_all_small_band_names.getInfo())  # ee.List of band names\n",
+    "\n",
+    "b1scale = rap_cover_2016.select('2016_AFG').projection().nominalScale()\n",
+    "b1projection = rap_cover_2016.select('2016_AFG').projection()\n",
+    "\n",
+    "print('Band 1 scale: ', b1scale.getInfo())\n",
+    "print('Band 1 projection: ', b1projection.getInfo())\n",
     "\n"
    ]
   },
@@ -307,43 +325,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Load daymet dataset \n",
-    "#daymet_17 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2017-01-01', '2017-12-31'))\n",
+    "daymet_16 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2016-01-01', '2016-12-31'))\n",
+    "daymet_17 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2017-01-01', '2017-12-31'))\n",
     "daymet_18 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2018-01-01', '2018-12-31'))\n",
     "daymet_19 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2019-01-01', '2019-12-31'))\n",
     "daymet_21 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2021-01-01', '2021-12-31'))\n",
     "\n",
     "\n",
     "### mean daily max temperature\n",
-    "#tmax_17 = daymet_17.select(\"tmax\").mean().clip(geometry).rename(['tmax_17'])\n",
+    "tmax_16 = daymet_16.select(\"tmax\").mean().clip(geometry).rename(['tmax_16'])\n",
+    "tmax_17 = daymet_17.select(\"tmax\").mean().clip(geometry).rename(['tmax_17'])\n",
     "tmax_18 = daymet_18.select(\"tmax\").mean().clip(geometry).rename(['tmax_18'])\n",
     "tmax_19 = daymet_19.select(\"tmax\").mean().clip(geometry).rename(['tmax_19'])\n",
     "tmax_21 = daymet_21.select(\"tmax\").mean().clip(geometry).rename(['tmax_21'])\n",
     "\n",
     "### mean daily min temperature\n",
-    "#tmin_17 = daymet_17.select(\"tmin\").mean().clip(geometry).rename(['tmin_17'])\n",
+    "tmin_16 = daymet_16.select(\"tmin\").mean().clip(geometry).rename(['tmin_16'])\n",
+    "tmin_17 = daymet_17.select(\"tmin\").mean().clip(geometry).rename(['tmin_17'])\n",
     "tmin_18 = daymet_18.select(\"tmin\").mean().clip(geometry).rename(['tmin_18'])\n",
     "tmin_19 = daymet_19.select(\"tmin\").mean().clip(geometry).rename(['tmin_19'])\n",
     "tmin_21 = daymet_21.select(\"tmin\").mean().clip(geometry).rename(['tmin_21'])\n",
     "\n",
     "### mean daily precip\n",
-    "#prcp_17 = daymet_17.select(\"prcp\").mean().clip(geometry).rename(['prcp_17'])\n",
+    "prcp_16 = daymet_16.select(\"prcp\").mean().clip(geometry).rename(['prcp_16'])\n",
+    "prcp_17 = daymet_17.select(\"prcp\").mean().clip(geometry).rename(['prcp_17'])\n",
     "prcp_18 = daymet_18.select(\"prcp\").mean().clip(geometry).rename(['prcp_18'])\n",
     "prcp_19 = daymet_19.select(\"prcp\").mean().clip(geometry).rename(['prcp_19'])\n",
     "prcp_21 = daymet_21.select(\"prcp\").mean().clip(geometry).rename(['prcp_21'])\n",
     "\n",
     "### mean daily snow water equivalent\n",
-    "#swe_17 = daymet_17.select(\"swe\").mean().clip(geometry).rename(['swe_17'])\n",
+    "swe_16 = daymet_16.select(\"swe\").mean().clip(geometry).rename(['swe_16'])\n",
+    "swe_17 = daymet_17.select(\"swe\").mean().clip(geometry).rename(['swe_17'])\n",
     "swe_18 = daymet_18.select(\"swe\").mean().clip(geometry).rename(['swe_18'])\n",
     "swe_19 = daymet_19.select(\"swe\").mean().clip(geometry).rename(['swe_19'])\n",
     "swe_21 = daymet_21.select(\"swe\").mean().clip(geometry).rename(['swe_21'])\n",
     "\n",
-    "climate_all = ee.Image([ tmax_18, tmax_19, tmax_21, tmin_18, tmin_19, tmin_21, \n",
-    "                        prcp_18, prcp_19, prcp_21, swe_18, swe_19, swe_21])\n",
+    "climate_all = ee.Image([ tmax_16, tmax_17, tmax_18, tmax_19, tmax_21, tmin_16, tmin_17, tmin_18, tmin_19, tmin_21, \n",
+    "                        prcp_16, prcp_17, prcp_18, prcp_19, prcp_21, swe_16, swe_17, swe_18, swe_19, swe_21])\n",
     "\n",
     "climate_small = focal_mean(climate_all, rad_small, \"meters\", name_small).updateMask(conus_img).clip(geometry)\n",
     "\n"
@@ -354,53 +377,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SNODAS Snow Depth Data"
+    "# Gradient Analysis - Surface Roughness applied to RAP Proportional Cover dataset "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Snodas data band names: ['snodays_18_5km', 'snodays_19_5km', 'snodays_21_5km']\n"
+      "sa_img_band_names: ['2016_AFG_5km_sa', '2016_PFG_5km_sa', '2016_SHR_5km_sa', '2016_TRE_5km_sa', '2016_BGR_5km_sa', '2017_AFG_5km_sa', '2017_PFG_5km_sa', '2017_SHR_5km_sa', '2017_TRE_5km_sa', '2017_BGR_5km_sa', '2018_AFG_5km_sa', '2018_PFG_5km_sa', '2018_SHR_5km_sa', '2018_TRE_5km_sa', '2018_BGR_5km_sa', '2019_AFG_5km_sa', '2019_PFG_5km_sa', '2019_SHR_5km_sa', '2019_TRE_5km_sa', '2019_BGR_5km_sa', '2021_AFG_5km_sa', '2021_PFG_5km_sa', '2021_SHR_5km_sa', '2021_TRE_5km_sa', '2021_BGR_5km_sa']\n"
      ]
     }
    ],
    "source": [
-    "#snodas_17 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2017_WGS84\").rename('snodays_17')\n",
-    "snodas_18 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2018_WGS84\").rename('snodays_18')\n",
-    "snodas_19 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2019_WGS84\").rename('snodays_19')\n",
-    "snodas_21 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2021_WGS84\").rename('snodays_21')\n",
+    "# Map the surface_sa function over the RAP image collection - calculate surface roughness in a moving window of 5000m radius\n",
+    "sa_img = surface_sa(rap_cover_all, 5000, \"_5km_sa\").clip(geometry)\n",
     "\n",
-    "snodas_all = ee.Image([snodas_18, snodas_19, snodas_21])\n",
-    "\n",
-    "snodas_small = focal_mean(snodas_all, rad_small, \"meters\", name_small).clip(geometry)\n",
-    "snodas_small_band_names = snodas_small.bandNames()\n",
-    "print('Snodas data band names:', snodas_small_band_names.getInfo())  # ee.List of band names\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# NASS and CRP Stats on Farm Size and Proportion of County Land in CRP categories positive for bobwhite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "avg_farm_size = ee.Image(\"projects/GEE_CSP/pf-bobwhite/NASS_CRP/nass_2017_average_farm_size\").rename('avg_farm_size_17')\n",
-    "prop_crp = ee.Image(\"projects/GEE_CSP/pf-bobwhite/NASS_CRP/proportion-county-land-crp-2020\").rename('prop_crp_acres_20')\n",
-    "\n",
-    "nass_crp_all = ee.Image([avg_farm_size, prop_crp])"
+    "sa_img_band_names = sa_img.bandNames()\n",
+    "print('sa_img_band_names:', sa_img_band_names.getInfo())  # ee.List of band names\n",
+    "\n"
    ]
   },
   {
@@ -413,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,43 +470,65 @@
     "  # Set the values as properties of the feature\n",
     "  return feature.set(values)\n",
     "\n",
-    "def extract_snodas_values(feature):\n",
-    "  geometry = feature.geometry()\n",
-    "\n",
-    "  # extract the raster values for the feature\n",
-    "  values=snodas_small.reduceRegion(\n",
-    "    reducer=ee.Reducer.mean(),\n",
-    "    geometry=geometry,\n",
-    "    scale=1000,\n",
-    "    crs='EPSG:4326'\n",
-    "  )\n",
-    "  # Set the values as properties of the feature\n",
-    "  return feature.set(values)\n",
-    "\n",
-    "def extract_nass_values(feature):\n",
-    "  geometry = feature.geometry()\n",
-    "\n",
-    "  # extract the raster values for the feature\n",
-    "  values=nass_crp_all.reduceRegion(\n",
-    "    reducer=ee.Reducer.mean(),\n",
-    "    geometry=geometry,\n",
-    "    scale=5000,\n",
-    "    crs='EPSG:5070'\n",
-    "  )\n",
-    "  # Set the values as properties of the feature\n",
-    "  return feature.set(values)\n",
-    "\n",
     "# Map the extract_values function over the feature collection\n",
-    "#results = centroids.map(extract_values)\n",
-    "#results = centroids.map(extract_snodas_values)\n",
-    "results = centroids.map(extract_nass_values)\n",
+    "rap_results = centroids.map(extract_rap_values)\n",
+    "\n",
     "\n",
     "# Export the feature collection as a CSV file\n",
     "task = ee.batch.Export.table.toDrive(\n",
-    "    collection=results,\n",
-    "    description='nass-export',\n",
+    "    collection=rap_results,\n",
+    "    description='RAP-export',\n",
     "    folder='GEE_exports',\n",
-    "    fileNamePrefix='nass_5km',\n",
+    "    fileNamePrefix='RAP_5km',\n",
+    "    fileFormat='CSV')\n",
+    "task.start()\n",
+    "\n",
+    "def extract_gradient_values(feature):\n",
+    "  # Get the geometry of the feature\n",
+    "  geometry = feature.geometry()\n",
+    "\n",
+    "  # Extract the raster values for the feature\n",
+    "  values = sa_img.reduceRegion(\n",
+    "      reducer=ee.Reducer.mean(),\n",
+    "      geometry=geometry,\n",
+    "      scale=30)\n",
+    "  # Set the values as properties of the feature\n",
+    "  return feature.set(values)\n",
+    "\n",
+    "# Export the feature collection as a CSV file\n",
+    "task = ee.batch.Export.table.toDrive(\n",
+    "    collection=rap_results,\n",
+    "    description='RAP-SA-export',\n",
+    "    folder='GEE_exports',\n",
+    "    fileNamePrefix='RAP_SA_5km',\n",
+    "    fileFormat='CSV')\n",
+    "task.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_climate_values(feature):\n",
+    "  # Get the geometry of the feature\n",
+    "  geometry = feature.geometry()\n",
+    "\n",
+    "  # Extract the raster values for the feature\n",
+    "  values = climate_small.reduceRegion(\n",
+    "      reducer=ee.Reducer.mean(),\n",
+    "      geometry=geometry,\n",
+    "      scale=1000)\n",
+    "  # Set the values as properties of the feature\n",
+    "  return feature.set(values)\n",
+    "\n",
+    "# Export the feature collection as a CSV file\n",
+    "task = ee.batch.Export.table.toDrive(\n",
+    "    collection=rap_results,\n",
+    "    description='daymet-climate-export',\n",
+    "    folder='GEE_exports',\n",
+    "    fileNamePrefix='daymet_climate_5km',\n",
     "    fileFormat='CSV')\n",
     "task.start()"
    ]
