--- a/code/utils/gee-gradient-analysis-WORKING.ipynb
+++ b/code/utils/gee-gradient-analysis-WORKING.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,28 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Choose radii for summarizing covariates\n",
-    "rad_large = 10000\n",
-    "rad_small = 5000\n",
-    "name_large = \"_10km\"\n",
-    "name_small = \"_5km\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rap_cover_2019 Band names: ['2018_AFG', '2018_PFG', '2018_SHR', '2018_TRE', '2018_BGR', '2019_AFG', '2019_PFG', '2019_SHR', '2019_TRE', '2019_BGR', '2021_AFG', '2021_PFG', '2021_SHR', '2021_TRE', '2021_BGR']\n",
-      "rap_cover_all_small Band names: ['2018_AFG_5km', '2018_PFG_5km', '2018_SHR_5km', '2018_TRE_5km', '2018_BGR_5km', '2019_AFG_5km', '2019_PFG_5km', '2019_SHR_5km', '2019_TRE_5km', '2019_BGR_5km', '2021_AFG_5km', '2021_PFG_5km', '2021_SHR_5km', '2021_TRE_5km', '2021_BGR_5km']\n"
+      "rap_cover_2019 Band names: ['2016_AFG', '2016_PFG', '2016_SHR', '2016_TRE', '2016_BGR', '2017_AFG', '2017_PFG', '2017_SHR', '2017_TRE', '2017_BGR', '2018_AFG', '2018_PFG', '2018_SHR', '2018_TRE', '2018_BGR', '2019_AFG', '2019_PFG', '2019_SHR', '2019_TRE', '2019_BGR', '2021_AFG', '2021_PFG', '2021_SHR', '2021_TRE', '2021_BGR']\n"
      ]
     }
    ],
@@ -122,40 +108,35 @@
     "\n",
     "\n",
     "### Filter RAP cover ImageCollection into yearly sets\n",
-    "#rap_cover_2016 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2016]))).toBands()\n",
-    "#rap_cover_2017 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2017]))).toBands()\n",
+    "rap_cover_2016 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2016]))).toBands()\n",
+    "rap_cover_2017 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2017]))).toBands()\n",
     "rap_cover_2018 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2018]))).toBands()\n",
     "rap_cover_2019 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2019]))).toBands()\n",
     "rap_cover_2021 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2021]))).toBands()\n",
     "\n",
     "### Combine all into single multiband image \n",
-    "rap_cover_all = ee.Image([rap_cover_2018, rap_cover_2019, rap_cover_2021])\n",
+    "rap_cover_all = ee.Image([rap_cover_2016, rap_cover_2017, rap_cover_2018, rap_cover_2019, rap_cover_2021])\n",
     "\n",
     "rap_cover_all_band_names = rap_cover_all.bandNames()\n",
-    "print('rap_cover_2019 Band names:', rap_cover_all_band_names.getInfo())  # ee.List of band names\n",
-    "\n",
-    "### Apply focal mean smoothing\n",
-    "rap_cover_all_small = focal_mean(rap_cover_all, rad_small, \"meters\", name_small).clip(geometry)\n",
-    "rap_cover_all_small_band_names = rap_cover_all_small.bandNames()\n",
-    "print('rap_cover_all_small Band names:', rap_cover_all_small_band_names.getInfo())  # ee.List of band names"
+    "print('rap_cover_2019 Band names:', rap_cover_all_band_names.getInfo())  # ee.List of band names\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sa_img_band_names: ['2018_AFG_5km_sa', '2018_PFG_5km_sa', '2018_SHR_5km_sa', '2018_TRE_5km_sa', '2018_BGR_5km_sa', '2019_AFG_5km_sa', '2019_PFG_5km_sa', '2019_SHR_5km_sa', '2019_TRE_5km_sa', '2019_BGR_5km_sa', '2021_AFG_5km_sa', '2021_PFG_5km_sa', '2021_SHR_5km_sa', '2021_TRE_5km_sa', '2021_BGR_5km_sa']\n"
+      "sa_img_band_names: ['2016_AFG_5km_sa', '2016_PFG_5km_sa', '2016_SHR_5km_sa', '2016_TRE_5km_sa', '2016_BGR_5km_sa', '2017_AFG_5km_sa', '2017_PFG_5km_sa', '2017_SHR_5km_sa', '2017_TRE_5km_sa', '2017_BGR_5km_sa', '2018_AFG_5km_sa', '2018_PFG_5km_sa', '2018_SHR_5km_sa', '2018_TRE_5km_sa', '2018_BGR_5km_sa', '2019_AFG_5km_sa', '2019_PFG_5km_sa', '2019_SHR_5km_sa', '2019_TRE_5km_sa', '2019_BGR_5km_sa', '2021_AFG_5km_sa', '2021_PFG_5km_sa', '2021_SHR_5km_sa', '2021_TRE_5km_sa', '2021_BGR_5km_sa']\n"
      ]
     }
    ],
    "source": [
     "# Map the function over the image collection\n",
-    "sa_img = surface_sa(rap_cover_all_small, 5000, \"_sa\")\n",
+    "sa_img = surface_sa(rap_cover_all, 5000, \"_5km_sa\").clip(geometry)\n",
     "\n",
     "sa_img_band_names = sa_img.bandNames()\n",
     "print('sa_img_band_names:', sa_img_band_names.getInfo())  # ee.List of band names"
@@ -163,31 +144,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "sa_img = sa_img.float()\n",
-    "\n",
-    "task1 = ee.batch.Export.image.toDrive(image = sa_img,\n",
-    "                                     folder = 'bobwhite-covs',\n",
-    "                                     description = 'rap-smoothed-sa' + str(scale) + \"m\",\n",
-    "                                     scale = scale,\n",
-    "                                     region = geometry.geometry(),\n",
-    "                                     maxPixels = 1e13,\n",
-    "                                     crs = projection)\n",
-    "task1.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc43ba2cab9744e291893a4d783b2be8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[40, -100], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children=(T…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading WhiteboxTools pre-compiled binary for first time use ...\n",
+      "Decompressing WhiteboxTools_darwin_amd64.zip ...\n",
+      "WhiteboxTools package directory: /Users/patrickfreeman-csp/opt/miniconda3/lib/python3.9/site-packages/whitebox\n",
+      "Downloading testdata ...\n"
+     ]
+    }
+   ],
    "source": [
     "vis_params = {\n",
-    "    'bands': '2019_TRE_5km_sa',\n",
+    "    'bands': '2019_AFG_5km_sa',\n",
     "    'min': 0,\n",
     "    'max': 50,\n",
     "    'palette': ['006633', 'E5FFCC', '662A00', 'D8D8D8', 'F5F5F5'],\n",
@@ -196,26 +183,6 @@
     "Map = geemap.Map(center=(40, -100), zoom=4)\n",
     "Map.addLayer(sa_img, vis_params, \"Tree SA\", True)\n",
     "Map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scale=30\n",
-    "\n",
-    "\n",
-    "task1 = ee.batch.Export.image.toDrive(image = rap_cover_2018,\n",
-    "                                     folder = 'RAP_exports',\n",
-    "                                     description = 'RAP-2018-' + str(scale) + \"m\",\n",
-    "                                     scale = scale,\n",
-    "                                     region = geometry.geometry(),\n",
-    "                                     maxPixels = 1e13,\n",
-    "                                     crs = \"EPSG:5070\")\n",
-    "\n",
-    "task1.start()\n"
    ]
   }
  ],
