--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -451,6 +451,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extract RAP proportional cover to CSV - this exports just fine "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -481,7 +489,23 @@
     "    folder='GEE_exports',\n",
     "    fileNamePrefix='RAP_5km',\n",
     "    fileFormat='CSV')\n",
-    "task.start()\n",
+    "task.start()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extract gradient metric values to csv - ARGH I CANNOT GET THIS TO EXPORT "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def extract_gradient_values(feature):\n",
     "  # Get the geometry of the feature\n",
@@ -490,14 +514,15 @@
     "  # Extract the raster values for the feature\n",
     "  values = sa_img.reduceRegion(\n",
     "      reducer=ee.Reducer.mean(),\n",
-    "      geometry=geometry,\n",
-    "      scale=30)\n",
+    "      geometry=geometry)\n",
     "  # Set the values as properties of the feature\n",
     "  return feature.set(values)\n",
     "\n",
+    "gradient_results = centroids.map(extract_gradient_values)\n",
+    "\n",
     "# Export the feature collection as a CSV file\n",
     "task = ee.batch.Export.table.toDrive(\n",
-    "    collection=rap_results,\n",
+    "    collection=gradient_results,\n",
     "    description='RAP-SA-export',\n",
     "    folder='GEE_exports',\n",
     "    fileNamePrefix='RAP_SA_5km',\n",
@@ -506,8 +531,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extract DAYMET climate values to csv - ARGH I CANNOT GET THIS TO EXPORT "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,14 +551,15 @@
     "  # Extract the raster values for the feature\n",
     "  values = climate_small.reduceRegion(\n",
     "      reducer=ee.Reducer.mean(),\n",
-    "      geometry=geometry,\n",
-    "      scale=1000)\n",
+    "      geometry=geometry)\n",
     "  # Set the values as properties of the feature\n",
     "  return feature.set(values)\n",
     "\n",
+    "climate_results = centroids.map(extract_climate_values)\n",
+    "\n",
     "# Export the feature collection as a CSV file\n",
     "task = ee.batch.Export.table.toDrive(\n",
-    "    collection=rap_results,\n",
+    "    collection=climate_results,\n",
     "    description='daymet-climate-export',\n",
     "    folder='GEE_exports',\n",
     "    fileNamePrefix='daymet_climate_5km',\n",
